salt/firewall/iptables
*filter
:INPUT ACCEPT [1:328]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:BADFLAGS - [0:0]
:PUBLIC_IN - [0:0]
:PUBLIC_OUT - [0:0]
:TCP_FLAGS - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -d 127.0.0.0/8 ! -i lo -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p icmp -m icmp --icmp-type any -j ACCEPT
-A INPUT -s 193.198.212.15/32 -j ACCEPT
-A INPUT -i br1001 -j PUBLIC_IN
-A OUTPUT -d 193.198.212.15/32 -j ACCEPT
-A OUTPUT -m owner --uid-owner 2000-2030 ! -d 10.80.3.0/24 -m limit --limit 5/min -j LOG --log-prefix "ganeti uid pool user network " --log-level 4
-A OUTPUT -m owner --uid-owner 2000-2030 ! -d 10.80.3.0/24 -j DROP
-A OUTPUT -o br1001 -j PUBLIC_OUT
-A PUBLIC_IN -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -m limit --limit 5/min --limit-burst 7 -j LOG --log-prefix "DROP SYN: " --log-level 4
-A PUBLIC_IN -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
-A PUBLIC_IN -f -m limit --limit 5/min --limit-burst 7 -j LOG --log-prefix "DROP FRAGMENTS: " --log-level 4
-A PUBLIC_IN -f -j DROP
-A PUBLIC_IN -p tcp -j TCP_FLAGS
-A PUBLIC_IN -m state --state RELATED,ESTABLISHED -j ACCEPT
-A PUBLIC_IN -p udp -m udp --sport 53 -j ACCEPT
-A PUBLIC_IN -p tcp -m tcp --dport 22 -m state --state NEW -m recent --set --name DEFAULT --rsource
-A PUBLIC_IN -p tcp -m tcp --dport 22 -m state --state NEW -m recent --update --seconds 180 --hitcount 4 --name DEFAULT --rsource -j DROP
-A PUBLIC_IN -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A PUBLIC_IN -j DROP
-A PUBLIC_OUT -d 161.53.123.5/32 -p udp -m udp --sport 123 -m state --state NEW,ESTABLISHED -j ACCEPT
-A PUBLIC_OUT -d 161.53.160.5/32 -p udp -m udp --sport 123 -m state --state NEW,ESTABLISHED -j ACCEPT
-A PUBLIC_OUT -d 161.53.30.80/32 -p udp -m udp --sport 123 -m state --state NEW,ESTABLISHED -j ACCEPT
-A PUBLIC_OUT -d 161.53.30.170/32 -p udp -m udp --sport 123 -m state --state NEW,ESTABLISHED -j ACCEPT
-A PUBLIC_OUT -p tcp -m tcp --sport 22 -m state --state ESTABLISHED -j ACCEPT
-A PUBLIC_OUT -p tcp -m tcp --dport 22 -j ACCEPT
-A PUBLIC_OUT -p tcp -m tcp --dport 25 -j ACCEPT
-A PUBLIC_OUT -p tcp -m tcp --dport 80 -j ACCEPT
-A PUBLIC_OUT -p tcp -m tcp --dport 443 -j ACCEPT
-A PUBLIC_OUT -p tcp -m tcp --dport 8080 -j ACCEPT
-A PUBLIC_OUT -p udp -m udp --dport 53 -j ACCEPT
-A PUBLIC_OUT -p icmp -m icmp --icmp-type any -j ACCEPT
-A PUBLIC_OUT -j DROP
-A BADFLAGS -m limit --limit 5/min --limit-burst 7 -j LOG --log-prefix "BADFLAGS: " --log-level 4
-A BADFLAGS -j DROP
-A TCP_FLAGS -p tcp -m tcp --tcp-flags FIN,ACK FIN -j BADFLAGS
-A TCP_FLAGS -p tcp -m tcp --tcp-flags PSH,ACK PSH -j BADFLAGS
-A TCP_FLAGS -p tcp -m tcp --tcp-flags ACK,URG URG -j BADFLAGS
-A TCP_FLAGS -p tcp -m tcp --tcp-flags FIN,RST FIN,RST -j BADFLAGS
-A TCP_FLAGS -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j BADFLAGS
-A TCP_FLAGS -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j BADFLAGS
-A TCP_FLAGS -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j BADFLAGS
-A TCP_FLAGS -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG NONE -j BADFLAGS
-A TCP_FLAGS -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -j BADFLAGS
-A TCP_FLAGS -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,PSH,URG -j BADFLAGS
-A TCP_FLAGS -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,ACK,URG -j BADFLAGS
COMMIT
